# tabulous

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  justfile  launch.py  pyproject.toml  setup.py  tabulous_doc.py  tox.ini
docs/: .buildinfo  font.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: 00-0_add_tables.py  00-1_add_spreadsheet.py  00-2_add_groupby.py  00-3_add_display.py  00-4_many_data_types.py  00_add_tables.py  01-0_add_magicgui.py  01-2_in_magicgui.py  01-3_use_side_area.py  01-4_use_overlay_widget.py  01_add_magicgui.py  02-0_filter_tables.py  02-1_cell_color_rule.py  02-1_cell_colormap.py  02-2_use_highlights.py  02-3_use_validator.py  02_seaborn_plot_widget.py  03-0_data_changed_signal.py  03-1_selection_changed.py  03_filter_tables.py  04-0_napari_feature_viewer.py  04-1_napari_feature_editor.py  04-2_napari_points_info.py  04_data_changed_signal.py  README.md
image/: generate_figs.py
rst/: conf.py  font.rst  index.rst
tabulous/: __init__.py  __main__.py  __psygnal.py  _async_importer.py  _colormap.py  _dtype.py  _eval.py  _fetch_and_install.py  _global_variables.py  _graph.py  _io.py  _ipython.py  _magicgui.py  _map_model.py  _pd_index.py  _protocols.py  _psygnal.py  _range.py  _selection_model.py  _selection_op.py  _slice_op.py  _sort_filter_proxy.py  _text_formatter.py  _timedelta.py  _utils.py  color.py  core.py  exceptions.py  post_init.py  threading.py  types.py
tests/: _utils.py  conftest.py  test_auto_completion.py  test_cell_eval.py  test_cell_ref_eval.py  test_colormap.py  test_column_dtype.py  test_commands.py  test_config.py  test_copy_paste.py  test_core.py  (+23 more)
(+316 files in other folders)
