[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabulous"
dynamic = ["version"]
description = "A table data viewer for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Hanjin Liu", email = "liuhanjin-sc@g.ecc.u-tokyo.ac.jp" },
]
dependencies = [
    "appdirs>=1.4.4",
    "collections-undo>=0.0.7",
    "magicgui>=0.5.1",
    "matplotlib>=3.1",
    "pandas>=1.5.2",
    "psygnal>=0.9.0",
    "qt-command-palette>=0.0.6",
    "qtconsole",
    "qtpy>=1.10.0",
    "requests",
    "tabulate",
    "toml",
]

[project.optional-dependencies]
all = [
    "pyqt5>=5.12.3",
    "scikit-learn>=1.1",
    "scipy>=1.7",
    "seaborn>=0.11",
]
pyqt5 = [
    "pyqt5>=5.12.3",
]
pyqt6 = [
    "pyqt6>=6.3.1",
]
scikit-learn = [
    "scikit-learn>=1.0",
]
testing = [
    "pytest",
    "pytest-qt",
]

[project.scripts]
tabulous = "tabulous.__main__:main"

[project.urls]
Download = "https://github.com/hanjinliu/tabulous"

[tool.hatch.version]
path = "tabulous/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tabulous",
]

[tool.hatch.envs.test.scripts]
run = "pytest -v"

[[tool.hatch.envs.test.matrix]]
backend = ["pyqt5", "pyqt6"]

[tool.hatch.envs.test.overrides]
matrix.backend.features = [
    { value = "pyqt5", if = [
        "pyqt5",
    ] },
    { value = "pyqt6", if = [
        "pyqt6",
    ] },
]

[tool.ruff]
line-length = 88
target-version = "py38"
fix = true

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "E501"]
"examples/*.py" = ["D", "B"]
"setup.py" = ["F821"]
